// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary one and four - small 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
  </View>
  <View>
    <Text>
      support-1
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-2
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-3
    </Text>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#DBDBDB",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <Text>
      support-4
    </Text>
  </View>
</View>
`;

exports[`2. secondary one and four - medium 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#4D4D4D",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-1
        </Text>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-2
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#4D4D4D",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-3
        </Text>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-4
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. secondary one and four - wide 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View>
      <Text>
        secondary-1
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderColor": "#4D4D4D",
        "borderRightWidth": 1,
        "borderStyle": "solid",
        "marginVertical": 10,
      }
    }
  />
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-1
        </Text>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-2
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomWidth": 1,
          "borderColor": "#4D4D4D",
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-3
        </Text>
      </View>
      <View
        style={
          Object {
            "borderColor": "#4D4D4D",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <Text>
          support-4
        </Text>
      </View>
    </View>
  </View>
</View>
`;
